Resolve service list overflow issue

--- a/src/app/pages/customer/customer-details/customer-details.component.scss
+++ b/src/app/pages/customer/customer-details/customer-details.component.scss
@@ -63,3 +63,10 @@
   flex-grow: 1;
   margin: 6px;
 }
+
+.srv-accounts-list-card {
+  flex-grow: 1;
+  margin: 6px;
+  overflow-y: auto;
+  min-height: 100px;
+}
